# ml-bank-anomaly-detection

./: .dockerignore  .gitignore  README.md  alertmanager-config.sh  alertmanager-entrypoint.sh  alerts.yml  azure-pipelines.yml  check-elastic-login.sh  config.sh  create-users.sh  docker-compose.deploy.yml  docker-compose.yml  filebeat.yml.template  generate-certs.sh  grafana-entrypoint.sh  init.sh  kibana-entrypoint.sh  kibana.yml.template  prometheus.yml  pyproject.toml  requirements.txt  run.sh
client/: Dockerfile  entrypoint.sh  main.py  models.py  server.py  transactions.py
client/app/: transactions.py
config/: alertmanager.yml.template  alerts.yml  elk_logger.yml  filebeat.yml.template  kibana.yml.template  logger.yml
infrastructure/: Dockerfile.client  Dockerfile.server  azure-pipelines.yml  docker-compose.deploy.yml  docker-compose.yml
scripts/: build.sh  client-entrypoint.sh  client.sh  config.sh  create-users.sh  generate-certs.sh  server-entrypoint.sh  server.sh  test.sh
server/: Dockerfile  requirements.txt  run.py
server/app/: schemas.py
server/routers/: models.py  transactions.py
services/server/: formatter.py  run.py
src/: main.py
src/config/: logger.yml
src/data/: data.py
src/features/: features.py  pipeline.py  utils.py
src/models/: config.yml  inference.py  model_features.py  models.py  pipeline.py  utils.py
src/utils/: logger.py  paths.py  settings.py  utils.py
tests/: conftest.py  test_data.py  test_features.py  test_integration.py  test_models.py
tests/server/: test_endpoint_models.py  test_endpoint_transaction.py  (+1 more)
(+7 files in other folders)
